--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: BAPC 2018
 email: organisation@bapc.eu
 description: >- # this means to ignore newlines until "baseurl:"
     BAPC 2018 website
-baseurl: "/BAPC2018-website/" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://2018.bapc.eu" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
