--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -6,3 +6,6 @@
   image: assets/img/exellys.png
   type: presenter
   link: https://www.exellys.com/
+- name: OM Partners
+  image: asserts/img/ompartners.jpg
+  link: https://www.ompartners.com/
