--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -7,5 +7,5 @@
   type: presenter
   link: https://www.exellys.com/
 - name: OM Partners
-  image: asserts/img/ompartners.jpg
+  image: assets/img/ompartners.jpg
   link: https://www.ompartners.com/
